--- a/mobile/index.html
+++ b/mobile/index.html
@@ -26,7 +26,7 @@
                 </h1>
                 <div class="login_wrap">
                     <div class="login_btn">
-                        <a href="login.html">
+                        <a href="../login.html">
                             <span class="material-icons login">
                                 person
                             </span>
@@ -155,10 +155,10 @@
                                         <p>E-모빌리티, 그리고 스포츠카의 미래</p>
                                     </div>
                                     <button>
-                                        <img src="imges/mobile_rigth.png" alt="">
+                                        <img src="../imges/mobile_rigth.png" alt="">
                                     </button>
                                 </div>
-                                <img src="imges/wallpaperbetter.png" alt="타이칸">
+                                <img src="../imges/wallpaperbetter.png" alt="타이칸">
                             </div>
                             <div class="swiper-slide item2 main">
                                 <div class="text_wrap">
@@ -167,10 +167,10 @@
                                         <p>E-모빌리티, 그리고 스포츠카의 미래</p>
                                     </div>
                                     <button>
-                                        <img src="imges/mobile_rigth.png" alt="">
+                                        <img src="../imges/mobile_rigth.png" alt="">
                                     </button>
                                 </div>
-                                <img src="imges/wallpaperbetter.png" alt="타이칸">
+                                <img src="../imges/wallpaperbetter.png" alt="타이칸">
                             </div>
                             <div class="swiper-slide item3 main">
                                 <div class="text_wrap">
@@ -179,10 +179,10 @@
                                         <p>E-모빌리티, 그리고 스포츠카의 미래</p>
                                     </div>
                                     <button>
-                                        <img src="imges/mobile_rigth.png" alt="">
+                                        <img src="../imges/mobile_rigth.png" alt="">
                                     </button>
                                 </div>
-                                <img src="imges/wallpaperbetter.png" alt="타이칸">
+                                <img src="../imges/wallpaperbetter.png" alt="타이칸">
                             </div>
                         </div>
                         <div class="swiper-pagination page"></div>
@@ -215,10 +215,10 @@
                                                 <p>93,000,000원 부터</p>
                                             </div>
                                             <button class="card_btn">
-                                                <img src="imges/mobile_rigth.png" alt="">
+                                                <img src="../imges/mobile_rigth.png" alt="">
                                             </button>
                                         </div>
-                                        <img src="imges/wallpaperbetter.png" alt="">
+                                        <img src="../imges/wallpaperbetter.png" alt="">
                                     </div>
                                     <div class="swiper-slide card">
                                         <div class="card_text">
@@ -239,10 +239,10 @@
                                                 <p>93,000,000원 부터</p>
                                             </div>
                                             <button class="card_btn">
-                                                <img src="imges/mobile_rigth.png" alt="">
+                                                <img src="../imges/mobile_rigth.png" alt="">
                                             </button>
                                         </div>
-                                        <img src="imges/wallpaperbetter.png" alt="">
+                                        <img src="../imges/wallpaperbetter.png" alt="">
                                     </div>
                                     <div class="swiper-slide card last"></div>
                                 </div>
@@ -258,14 +258,14 @@
                                                 <p>93,000,000원 부터</p>
                                             </div>
                                             <button class="card_btn">
-                                                <img src="imges/mobile_rigth.png" alt="">
+                                                <img src="../imges/mobile_rigth.png" alt="">
                                             </button>
                                         </div>
-                                        <img src="imges/wallpaperbetter.png" alt="">
+                                        <img src="../imges/wallpaperbetter.png" alt="">
                                     </div>
-                                    <div class="swiper-slide card"><img src="imges/wallpaperbetter.png" alt="">
+                                    <div class="swiper-slide card"><img src="../imges/wallpaperbetter.png" alt="">
                                     </div>
-                                    <div class="swiper-slide card"><img src="imges/wallpaperbetter.png" alt="">
+                                    <div class="swiper-slide card"><img src="../imges/wallpaperbetter.png" alt="">
                                     </div>
                                     <div class="swiper-slide">Slide 4</div>
                                     <div class="swiper-slide">Slide 5</div>
@@ -297,7 +297,7 @@
                                     <p>금융리스상품으로 고객님께 유연하고,
                                         매력적인 조건과 함께 합리적인 월 납입금을 제공해 드립니다.</p>
                                     <button class="card_btn">
-                                        <img src="imges/card_arrow.png" alt="">
+                                        <img src="../imges/card_arrow.png" alt="">
                                     </button>
                                 </div>
                             </div>
@@ -307,7 +307,7 @@
                                     <p>고객님이 언제나 새로운 포르쉐를 운행할 수 있도록 간단하면서도
                                         유연한 운용리스 상품을 제공해 드립니다.</p>
                                     <button class="card_btn">
-                                        <img src="imges/card_arrow.png" alt="">
+                                        <img src="../imges/card_arrow.png" alt="">
                                     </button>
                                 </div>
                             </div>
@@ -317,7 +317,7 @@
                                     <p>고객님의 자금 운영 계획에 꼭 맞는 자유로운 할부 방식으로,
                                         포르쉐를 소유할 수 있는 가장 경제적인 상품입니다. </p>
                                     <button class="card_btn">
-                                        <img src="imges/card_arrow.png" alt="">
+                                        <img src="../imges/card_arrow.png" alt="">
                                     </button>
                                 </div>
                             </div>
@@ -336,17 +336,17 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide lifewrap">
                                 <a href="#" class="life_item">
-                                    <img src="imges/life_01.jpg" alt="">
+                                    <img src="../imges/life_01.jpg" alt="">
                                 </a>
                             </div>
                             <div class="swiper-slide lifewrap">
                                 <a href="#" class="life_item">
-                                    <img src="imges/life_02.jpg" alt="">
+                                    <img src="../imges/life_02.jpg" alt="">
                                 </a>
                             </div>
                             <div class="swiper-slide lifewrap">
                                 <a href="#" class="life_item">
-                                    <img src="imges/life_03.jpg" alt="">
+                                    <img src="../imges/life_03.jpg" alt="">
                                 </a>
                             </div>
                             <div class="swiper-slide lifewrap last">
