--- a/mobile/index.html
+++ b/mobile/index.html
@@ -227,7 +227,7 @@
                                                 <p>93,000,000원 부터</p>
                                             </div>
                                             <button class="card_btn">
-                                                <img src="imges/mobile_rigth.png" alt="">
+                                                <img src="../imges/mobile_rigth.png" alt="">
                                             </button>
                                         </div>
                                         <img src="imges/wallpaperbetter.png" alt="">
