--- a/mobile/index.html
+++ b/mobile/index.html
@@ -26,7 +26,7 @@
                 </h1>
                 <div class="login_wrap">
                     <div class="login_btn">
-                        <a href="../login.html">
+                        <a href="#", onClick="location.href='../login.html'">
                             <span class="material-icons login">
                                 person
                             </span>
@@ -230,7 +230,7 @@
                                                 <img src="../imges/mobile_rigth.png" alt="">
                                             </button>
                                         </div>
-                                        <img src="imges/wallpaperbetter.png" alt="">
+                                        <img src="../imges/wallpaperbetter.png" alt="">
                                     </div>
                                     <div class="swiper-slide card">
                                         <div class="card_text">
