--- a/mobile/index.html
+++ b/mobile/index.html
@@ -26,7 +26,7 @@
                 </h1>
                 <div class="login_wrap">
                     <div class="login_btn">
-                        <a href="#", onClick="location.href='../login.html'">
+                        <a href="../login.html">
                             <span class="material-icons login">
                                 person
                             </span>
