--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="login_page">
                         <div class="input_box">
-                            <p class="input_tit">다양한 포르쉐 정보가 궁금하다면?<br/>로그인하세요.</p>
+                            <p class="input_tit">다양한 포르쉐 정보가 궁금하다면?<br />로그인하세요.</p>
                             <div class="form_id reset">
                                 <input type="email" name="email" placeholder="이메일을 입력하세요" autocomplete='off' required>
                                 <label for="email"></label>
@@ -40,7 +40,8 @@
                                 <label for="password"></label>
                             </div>
                             <div class="check_box">
-                                <div class="ck_block"><input type="checkbox" name="login" value="login" checked> <span>아이디 저장</span></div>
+                                <div class="ck_block"><input type="checkbox" name="login" value="login" checked>
+                                    <span>아이디 저장</span></div>
                                 <div><input type="submit" value="지금로그인" class="login_btn btn"></div>
                             </div>
                             <div class="login_text">
@@ -68,6 +69,16 @@
         </div>
     </div>
     <script src="js/custom.js"></script>
+    <script>
+        var UserAgent = navigator.userAgent;
+
+        if (UserAgent.match(/iPhone|iPod|Android|Windows CE|BlackBerry|Symbian|Windows Phone|webOS|Opera Mini|Opera Mobi|POLARIS|IEMobile|lgtelecom|nokia|SonyEricsson/i) != null || UserAgent.match(/LG|SAMSUNG|Samsung/) != null) {
+            location.href = "login.html";
+        }
+        else {
+
+        }
+    </script>
 </body>
 
 </html>
